Finished Reviews Microservice (GetReview + GetGameReviews + PutReview + DeleteReview + PutHelpfulReview + GetGameReviewsByLanguage + GetReviewsByUser + GetReviewsByHelpgul) + added new tests for each functionality on the reviews microservice
